# lambdapic

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.agents/skills/gen-docs/: SKILL.md
.agents/skills/release/: CHANGELOG_GUIDE.md  SKILL.md
.github/workflows/: python-publish.yml  release.yml
docs/: core-classes.md
docs/source/: AI_prompt.md  AI_prompt.rst  api.rst  callbacks.rst  conda.yml  conf.py  core.rst  example.rst  extension.rst  index.rst  installation.rst  introduction.rst  requirements.txt  simulation.rst  species.rst  write_callbacks.rst
docs/source/core/: fields.rst  mpi.rst  particles.rst  utils.rst
example/: cascade.py  fluid-hybrid.py  laser-target-3d.py  laser-target.py  lwfa.py  photons.py  qed.py  ring.py  species-resolved-ex.py
lambdapic/: __init__.py  simulation.py  species.py  utils.py
lambdapic/callback/: callback.py  hdf5.py  laser.py  utils.py  vtk.py
lambdapic/core/: fields.py  particles.py  species.py
lambdapic/core/boundary/: cpml.py
lambdapic/core/interpolation/: field_interpolation.py
lambdapic/core/mpi/: mpi_manager.py  sync_fields2d.c  sync_fields2d.pyi  sync_fields3d.c  sync_fields3d.pyi  sync_particles_2d.c  sync_particles_2d.pyi  sync_particles_3d.c  sync_particles_3d.pyi
lambdapic/core/patch/: cpu.py  metis.py  patch.py  sync_fields2d.c  sync_fields3d.c  sync_fields3d.pyi  sync_particles_2d.c  sync_particles_2d.pyi  sync_particles_3d.c  sync_particles_3d.pyi
lambdapic/core/qed/: optical_depth.py  optical_depth_tables.py  optical_depth_tables_sigmoid.py  pair_production.py
lambdapic/core/sort/: cpu3d.c
lambdapic/core/utils/: logger.py  timer.py
src/lambdapic/: __init__.py  _mask_simulation.py  cli.py  simulation.py  utils.py
src/lambdapic/callback/: AGENTS.md  callback.py  hdf5.py  laser.py  plot.py  restart.py  utils.py
src/lambdapic/cli/: auto_reload.py  main.py  mcp.py  mcp_manual.md  stat.py
src/lambdapic/core/: fields.py  particles.py  species.py
src/lambdapic/simulation/: __init__.py  _mask_simulation.py  simulation.py  utils.py
tests/: AGENTS.md  __init__.py  test_auto_species.py  test_callback.py  test_collision.py  test_debye_length.py  test_enable_mixin.py  test_gaussian_laser.py  test_get_fields_3d.py  test_hdf5_callback.py  test_inter_collision_cell.py  test_intra_collision_cell.py  test_laser_target.py  test_load_particles.py  test_mask_simulation.py  test_mcp_server.py  test_moving_window.py  test_numerical_heating.py  test_pair_production.py  test_photons.py  test_qed_sigmoid.py  test_radiation.py  test_random_seed.py  test_restart.py  test_set_momentum.py  test_simple_laser.py  test_sort.py  test_species_njit.py
tests/core/current/: test_current_deposition.py
tests/core/utils/: test_timer.py
tests/mpi/: conftest.py  test_rebalance.py  test_syncparticles.py
(+69 files in other folders)
