[project]
name = "lambdapic"
description = "A Particle-in-Cell framework with dynamic behavior modification through callbacks"
version = "0.0.0"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "pydantic",
    "tqdm",
    "loguru",
    "deprecated",
    "h5py"
]
requires-python = ">=3.10"

authors = [
  {name = "xsgeng", email = "xsgeng@siom.ac.cn"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["Plasma Physics", "Strong field", "PIC"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/xsgeng/lambdapic"

[build-system]
requires = [
    "setuptools",
    "numpy",
    "h5py",
    "numba",
    "scipy"
]
