[project]
name = "lambdapic"
description = "A Particle-in-Cell framework with dynamic behavior modification through callbacks"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "pydantic",
    "tqdm",
    "loguru",
    "deprecated",
    "mpi4py",
    "pymetis",
    "h5py"
]
requires-python = ">=3.10"

dynamic = ["version"]

authors = [
  {name = "xsgeng", email = "xsgeng@siom.ac.cn"}
]
license = "GPL-3.0"
readme = "README.md"
keywords = ["Plasma Physics", "Strong field", "PIC"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/xsgeng/lambdapic"

[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "numpy",
    "numba",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lambdapic"]

[tool.setuptools_scm]