[project]
name = "lambdapic"
description = "A Particle-in-Cell framework with dynamic behavior modification through callbacks"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "pydantic",
    "tqdm",
    "loguru",
    "deprecated",
    "mpi4py",
    "pymetis",
    "h5py",
    "yaspin",
    "packaging",
    "requests",
]
requires-python = ">=3.10"

dynamic = ["version"]

authors = [
  {name = "xsgeng", email = "xsgeng@siom.ac.cn"}
]
readme = "README.md"
keywords = ["Plasma Physics", "Strong field", "PIC"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/xsgeng/lambdapic"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mpi>=0.6",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "codecov>=2.0"
]

[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "numpy",
    "numba",
    "scipy",
    "mpi4py",
    "mpich",
]

[tool.setuptools_scm]
